--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -27,7 +27,9 @@
    "source": [
     "This project is a Kaggle competition (https://www.kaggle.com/competitions/nlp-getting-started/overview) with the goal of classifying Tweets about real disasters with machine learning models.\n",
     "\n",
-    "The data set was created but figure-eight, which contains about 10,000 tweets that are hand classified to either be real disasters or not."
+    "The data set was created but figure-eight, which contains about 10,000 tweets that are hand classified to either be real disasters or not.\n",
+    "\n",
+    "Natural Language Processing (NLP) is a field of computer science that enable computer programs to understand human languages. Computers only understand machine languages, so in order of it to understand human languages it takes a lot of efforts. In this project, we intend to build neural networks, which is a machine learning network that mimics the structure of human brain to process text information."
    ]
   },
   {
